[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bifold"

# the first released version
# 1/(1+1/e) = 0.73105
version = "0.731.32"

authors = [
  { name="Mesut Karakoç", email="mesutkarakoc@gmail.com" },
]

description = "BiFold calculates a nuclear potential using the double folding model"
readme = "README.md"
#license = { file="LICENSE" }

requires-python = ">=3.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

#dependencies = [
#    "numpy",
#	"numba",
#	"scipy",
#   "matplotlib",
#	"random",
#	"sys",
#	"time",
#	"io",
#	"html.parser",
#	"urllib.request"
#]

[project.urls]
"Homepage" = "https://github.com/mkarakoc/bifold"
#"Bug Tracker" = "https://github.com/mkarakoc/bifold"